--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -123,10 +123,13 @@ html {
   }
   
   input[type="search"] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px;
-  }
-  
+    appearance: none;  
+    -webkit-appearance: none;  
+    outline: none;  
+    border: 1px solid #ccc; 
+    padding: 8px;  
+}
+ 
   input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration {
     -webkit-appearance: none;
   }
