--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -150,11 +150,11 @@
 .event-card {
     background-color: #fff490;  
     color: #333; 
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 400px; 
-    margin: 2rem auto;  
+    margin-top: 2rem; 
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -222,11 +222,8 @@
 .card-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
-    gap: 1rem;
-    width: 100%;  
-    max-width: 100%;  
-    margin: 0 auto;  
-    padding: 0 20px;  
+    gap: 10px;
+    max-width: 150%;  
 }
 
 @media (max-width: 1024px) {
@@ -243,19 +240,19 @@
 
 /* Business Spotlight */
 .spotlight-cards {
-    display: flex;
-    justify-content: space-around;
-    gap: 2rem;
+    display: grid;
+    justify-content: space-between;
+    gap: 1rem;
     margin-top: 2rem;
 }
 
 .spotlight-card {
     background-color: #ffcc00;
     color: #333;
-    padding: 1.5rem;
+    padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 350px;
+    max-width: 400px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
