--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -32,26 +32,25 @@ header {
 }
 
 /* Navigation Styles */
+
 .nav-links {
-    margin: 1rem auto 2rem;
     display: flex;
-    justify-content: space-evenly;
-    background-color: #3633c5;
+    justify-content: space-around; 
+    align-items: center; 
+    background-color: #3404a4; 
+    padding: 5px 0; 
 }
 
 .nav-links a {
-    display: block;
-    color: #ffffff;  
-    padding: 0.75rem;
-    text-decoration: none;
-    text-align: center;
-    font-size: 1.3rem;
+    color: white; 
+    text-decoration: none; 
+    padding: 10px 10px; 
+    font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
 .nav-links a:hover {
-    font-weight: 700;
-    text-decoration: underline;
-    text-decoration-color: yellow;
+    background-color: #5a2dfd; 
 }
 
 /* Footer Styles */
