--- a/styles/home.css
+++ b/styles/home.css
@@ -1,17 +1,63 @@
 .hero {
     background-image: url('https://www.diariopanorama.com/fotos/cache/notas/2022/12/18/1010x567_messi-copa-mundo-434474-193021.jpg'); 
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+    background-size: cover; 
+    background-position: center top;
+    background-repeat: no-repeat;
+    height: 75vh; 
     display: flex;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
     color: white;
     text-align: center;
+    flex: 0 0 75%;
 }
 
+/* Hero content styling */
 .hero-content {
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
+    width: 80%; 
+}
+
+.hero-container {
+    display: flex; 
+    justify-content: flex-start; 
+    align-items: flex-start; 
+    width: 100%;
+    gap: 1rem;  
+}
+
+/* Event Card Styling */
+.event-card {
+    background-color: #ffffff;  
+    border-left: 5px solid #FF7F50;  
+    color: #333;  
+    padding: 20px;
+    width: 25rem;  
+    margin-top: -1rem;  
+    border-radius: 8px;  
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); 
+    margin-left: -1rem;  
+}
+
+/* Event Card Link Styling */
+.event-card a {
+    color: #0A74DA;
+    text-decoration: none; 
+    font-weight: bold;
+    transition: color 0.3s ease;  
+}
+
+.event-card a:hover {
+    color: #FF7F50;  
+}
+
+/* Card Grid */
+.card-grid {
+    display: flex;
+    justify-content: center; 
+    margin-bottom: 2rem;
+    padding: 1rem;
+    gap: 2rem;  
 }
