--- a/styles/project.css
+++ b/styles/project.css
@@ -6,6 +6,8 @@ body {
     line-height: 1.6;
     background-color: #f4f4f4; 
     color: #333;
+    margin: 0;
+    padding: 0;
 }
 
 /* Header */
@@ -14,34 +16,36 @@ header {
     padding-top: 1rem;
     font-size: 1rem;
     color: #ffffff;  
+    text-align: center;
 }
 
 /* Header h1 */
 header h1 {
     font-family: 'Raleway', sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
-    text-align: center;          
-    width: 100%;                 
-    margin: 0 auto;             
+    margin: 0;
 }
 
 /* Navigation Links */
 .nav-links {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column; 
+    justify-content: center;
     align-items: center;
     background-color: #003366;
-    padding: 5px 0;
+    padding: 10px 0;
 }
 
 .nav-links a {
     font-family: 'Roboto', sans-serif; 
     color: white;
     text-decoration: none;
-    padding: 10px 10px;
-    font-size: 16px;
+    padding: 10px;
+    font-size: 18px;
     transition: background-color 0.3s ease;
+    width: 100%; 
+    text-align: center;
 }
 
 .nav-links a:hover {
@@ -59,7 +63,7 @@ main {
 /* Card Grid */
 .card-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr; 
     gap: 1rem;
     margin-bottom: 2rem;
 }
@@ -76,6 +80,7 @@ main {
     color: #0A74DA;
 }
 
+/* Scenarios Section */
 .scenarios {
     border: 3px solid #FF7F50;
     padding: 1rem;
@@ -100,4 +105,40 @@ footer p {
     font-family: 'Raleway', sans-serif; 
     color: white;
     font-size: 1rem;
+}
+
+@media (min-width: 600px) {
+    /* Navigation Links */
+    .nav-links {
+        flex-direction: row; 
+        justify-content: space-around; 
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+
+    .card-grid {
+        grid-template-columns: 1fr 1fr; 
+    }
+
+    header h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 900px) {
+
+    .card-grid {
+        grid-template-columns: 1fr 1fr 1fr; 
+    }
+    
+    header h1 {
+        font-size: 2.5rem; 
+    }
+
+    .nav-links a {
+        font-size: 18px;
+    }
 }
